--- a/static/css/style.css
+++ b/static/css/style.css
@@ -7,9 +7,6 @@
     font-family: Montserrat, sans-serif;
 }
 
-html {
-}
-
 body {
     margin-left: 15%;
     margin-right: 15%;
@@ -21,10 +18,6 @@ body {
 
 ul {
     list-style: none;
-}
-
-a {
-    text-decoration: none;
 }
 
 nav {
@@ -46,6 +39,7 @@ li{
 }
 
 .nav_link {
+    text-decoration: none;
     padding: 0px 10px;
     padding-bottom: 2px;
     color:rgba(0, 0, 0, 0.774);
@@ -57,10 +51,13 @@ li{
     color:rgb(0, 0, 0);
 }
 
-main {
+.footer {
 }
 
-.nav_item:hover {
+.useful_links {
+}
+
+main {
 }
 
 .logo {
