--- a/static/css/style.css
+++ b/static/css/style.css
@@ -13,11 +13,51 @@ body {
     width: 70%;
 }
 
-.header {
-}
 
 ul {
     list-style: none;
+}
+
+p {
+    margin-bottom: 10px;
+}
+
+.site-title {
+    font-size: 112px;
+    font-family: 'BeyondTheMountains';
+}
+
+.site-description {
+    width: 284px;
+    margin: -5px 0 0;
+    font-size: 10px;
+    letter-spacing: 0.26rem;
+    color: #9d9d9d;
+    text-transform: uppercase;
+    text-align: right;
+    margin: -10px 0 0;
+}
+
+h1 {
+    display: block;
+    text-align: center;
+    /*margin-top: 15px;
+    margin-bottom: 15px;*/
+}
+
+h2 {
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
+h3 {
+    margin-top: 10px;
+    margin-bottom: 15px;
+}
+
+h4 {
+    margin-top: 10px;
+    margin-bottom: 15px 
 }
 
 nav {
@@ -51,7 +91,99 @@ li{
     color:rgb(0, 0, 0);
 }
 
+.block_container {
+    margin-top: 50px;
+    margin-bottom: 50px;
+}
+
+.flexible_container {
+    display:flex;
+    flex-direction: row;
+    justify-content:baseline;
+}
+
+.blogs_list {
+    padding-top: 10px;
+    padding-bottom: 10px;
+} 
+
+.indentation_element {
+    margin-left: 50px;
+}
+
+.figure {
+    padding-top: 15px;
+}
+
+figcaption{
+    margin-top: 5px;
+}
+
+.fa-vk {
+    content: '\f189';
+    font-family: 'Font Awesome 5 Brands';
+    font-weight: 400;
+}
+
+.fa-telegram {
+    content: '\f2c6';
+    font-family: 'Font Awesome 5 Brands';
+    font-weight: 400;
+}
+
+.social-icons {
+    padding: 0;
+    list-style: none;
+    margin: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    flex-direction: row;
+}
+.social-icons li {
+    display: inline-block;
+    position: relative;
+}
+.social-icons li a {
+    width: 60px;
+    height: 60px;
+    display: inline-block;
+    text-align: center;
+    margin: 0 4px;
+    border-radius: 50%;
+    padding: 6px;
+    box-sizing: border-box;
+    text-decoration:none;
+    box-shadow: 0 8px 12px rgba(0,0,0,0.3);
+    background: linear-gradient(0deg, #ddd, #fff);
+    transition: .5s;
+}
+.social-icons li a:hover {
+    box-shadow: 0 2px 5px rgba(0,0,0,0.3);
+    color: #000;
+}
+.social-icons li a i {
+    display: block;
+    background: linear-gradient(0deg, #fff, #ddd);
+    border-radius: 50%;
+    padding: 12px;
+    font-size: 24px;
+    color: #969696;
+    transition: .5s;
+    width: 24px;
+    height: 24px;
+    position: absolute;
+    box-sizing: content-box;
+}
+.social-icons li a:hover i {
+    color: #337AB7;
+}
+
+.header {
+}
+
 .footer {
+    margin-top: 35px;
 }
 
 .useful_links {
@@ -61,4 +193,20 @@ main {
 }
 
 .logo {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    margin-bottom: 25px;
+}
+
+.vk_reels {
+    margin-top: 15px;
+    margin-bottom: 15px;
+
+}
+
+.link_vk_reels {
+    display: block;
+    margin-left: auto;
+    margin-right: auto
 }
