--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,9 +1,17 @@
 @import url('https://fonts.googleapis.com/css?family=Open+Sans:700');
+@import url("https://fonts.fontstorage.com/import/marckscript.css");
+@import url("https://fonts.fontstorage.com/import/nautilus.css");
+@import url("https://fonts.fontstorage.com/import/alexander.css");
+@import url("https://fonts.fontstorage.com/import/pecita.css");
+@import url("https://fonts.fontstorage.com/import/sweetmavkascript.css");
 
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+}
+
+html {
     font-family: Montserrat, sans-serif;
 }
 
@@ -24,7 +32,11 @@ p {
 
 .site-title {
     font-size: 112px;
-    font-family: 'BeyondTheMountains';
+    /*font-family: 'Marck Script';*/
+    /*font-family: 'Nautilus Pompilius';*/
+    /*font-family: 'Alexander';*/
+    /*font-family: 'Pecita';*/
+    font-family: 'Sweet Mavka Script';
 }
 
 .site-description {
@@ -209,4 +221,9 @@ main {
     display: block;
     margin-left: auto;
     margin-right: auto
+}
+
+img {
+    margin-top: 5px;
+    margin-bottom: 5px;
 }
